# Library

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  Makefile  Pipfile  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .coveragerc  .flake8  .isort.cfg  Pipfile  conftest.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/book/: admin.py  forms.py  metabooks_api.py  models.py  serializers.py  urls.py  views.py  views_prev.py
backend/book/migrations/: 0001_initial.py  0002_publisher_slug.py  0003_auto_20191129_1345.py  0004_auto_20210314_0533.py  0005_auto_20210802_1859.py  0006_rename_gtin_book_ean.py
backend/book/templates/: book_edit.html  book_list.html  book_remove.html
backend/book/tests/: conftest.py  (+2 more)
backend/config/: settings.py  urls.py
backend/core/: models.py  views.py
backend/person/: admin.py  forms.py  urls.py  views.py
backend/templates/: base.html
book/: admin.py  forms.py  models.py  urls.py  views.py
book/migrations/: 0002_auto_20191111_1521.py
book/templates/: book_edit.html  book_list.html  book_new.html
config/: settings.py  urls.py
contrib/: env-sample
frontend/: .eslintrc.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
frontend/src/: App.css  App.js  index.html  index.js  setupProxy.js
person/: forms.py  models.py  urls.py  views.py
person/migrations/: 0001_initial.py  0004_remove_person_type.py
person/templates/: base.html  edit.html  list.html  new.html  person_list.html  remove.html
templates/: base.html
(+77 files in other folders)
