[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Gustavo Sousa <ola@gustavosousa.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
requests = "^2.27.1"
djoser = "^2.1.0"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = ['tests.py', 'test_*.py', '*_tests.py']
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]
testpaths = ["tests"]
